--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 $boxColor: #5F93F8;
 $secondaryBoxColor: #FFFFFF;
 $accentColor: orange;
+$standart-transition-style: cubic-bezier(0.4, 0, 0.2, 1);
 
 body {
     margin: 0;
@@ -42,6 +43,7 @@ code {
     border: 1px solid black;
     background-color: $boxColor;
     box-sizing: border-box;
+    transition: all 250ms $standart-transition-style;
 
 }
 
@@ -56,7 +58,7 @@ code {
 }
 
 .hovered_thumb {   
-    height: 500px;
+    height: 528px;
 
     overflow-y: scroll;
     float: inline-end;
